--- a/styles/main.css
+++ b/styles/main.css
@@ -47,3 +47,13 @@ body.landing{
     letter-spacing: 0.5rem;
     text-shadow: 1px 1px 0px rgb(58,23,63);
 }
+
+.clearfix::before,
+.clearfix::after{
+    content: " ";
+    display: table;
+}
+
+.clearfix:: after{
+    clear: both;
+}
