--- a/styles/main.css
+++ b/styles/main.css
@@ -91,3 +91,13 @@ body{
     .column.fourth{width:25%;}
     .column.flow-opposite{float:right,}
 }
+
+.clearfix::before,
+.clearfix::after{
+    content:"";
+    display:table;
+}
+
+.clearfix::after{
+    clear:both;
+}
