--- a/styles/main.css
+++ b/styles/main.css
@@ -38,6 +38,12 @@ body{
     text-decoration: none;
 }
 
+/*This is the assignment added to Checkout 5*/
+.navbar:active{
+    color:rgb(233,50,117);
+    background-color: white;
+}
+
 .links-container .navbar-link{
     display: table-cell;
     position:relative;
@@ -75,7 +81,6 @@ body{
     max-width: 56rem;
 }
 
-/* Medium screens (640px)*/
 @media (min-width:640px){
     html{font-size:112%;}
     
@@ -92,6 +97,8 @@ body{
     .column.flow-opposite{float:right,}
 }
 
+
+/* This is the clearfix added to Module 4 */
 .clearfix::before,
 .clearfix::after{
     content:"";
